# ud-co2s-monitor

./: .gitignore  Cargo.toml  Readme.md  awsiot.toml  config_example.yaml  docker-compose.yml  prometheus.yml
grafana/dashboards/: dashboards.yml  my_dashboard.json
grafana/datasources/: influxdb.yml
src/: exporter.rs  i2c_temp.rs  lib.rs  main.rs  parse.rs  ud_co2s.rs
src/exporter/: file.rs  influxdb.rs
src/i2c_temp/: consumer.rs  parse.rs
src/ud_co2s/: consumer.rs  parse.rs
