[package]
name = "ud-co2s-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
config = "0.13.3"
hyper = {version = "0.14", features = ["full"] }
i2c = "0.1.0"
lazy_static = "1.4.0"
prometheus = "0.13.3"
regex = "1.8.3"
rumqtt = "0.31.0"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"
serialport = {version="4.2.1", default-features = false}
structopt = "0.3.26"
tokio = { version = "1.28.2", features = ["rt","macros","rt-multi-thread"] }

[[bin]]
name = "udco2s_exporter"
path = "src/bin/udco2s_exporter.rs"

