[package]
name = "ud-co2s-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
config = "0.15.11"
futures = "0.3.31"
regex = "1.11.1"
reqwest = {version = "0.12.20", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serialport = "4.7.2"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread"] }
